--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <body>
     <table style="width: 100%"> 
         <tr>
-            <td rowspan=2></td>
+            <td rowspan=3></td>
             <td class="logo">
                 <a href="/"><img src="/style/pics/logo.jpg" width=70/></a>
             </td>
@@ -21,12 +21,15 @@
                     <li><a href="/yhteystiedot.html">Yhteystiedot / Contact</a>
                 </ul>
             </td>
-            <td rowspan=2></td>
+            <td rowspan=3></td>
         </tr>
         <tr>
             <td colspan=2>
                 {{ content }}
             </td>
+        </tr>
+        <tr>
+            <td colspan=2 class="footer">© 2020. All rights reserved Kouvosto Telecom. Kaikki oikeudet pidätetään. </td>
         </tr>
     </table>
 </body>
